// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FORMATTING_DIRECTIVES — the one formatting block in every generation > states the founder-priority standards (snapshot) 1`] = `
"--- Formatting and drafting standards (apply to the ENTIRE document) ---
Produce a professionally formatted, execution-ready legal document:
- STRUCTURE: organize the document into consistently numbered Articles and Sections (e.g. "Article I", "Section 1.1") in a logical order; never a wall of unstructured text.
- HEADINGS & CAPITALIZATION: write the document title and every article/section heading in Title Case with correct capitalization throughout. NEVER a lowercase or mixed-case title such as "operating agreement OF Acme LLC" — titles and headings read as proper titles.
- DEFINED TERMS & SECTION LEADS: bold each defined term where it is first defined, and bold the lead-in phrase of each section (e.g. "**Governing Law.** This Agreement is governed by …").
- REGISTER: use a formal, precise, robust legal register — complete sentences, defined terms used consistently, no casual phrasing, filler, or hedging.
- SIGNATURE, DATE & EXECUTION LINES: NEVER draw signature, date, or execution lines with underscores or dashes ("______", "Date: ____", "-----", "—"). Emit the canonical execution markers instead — {{sign:key}} for a signature line, {{date:key}} for a date line, and {{name:key}} / {{title:key}} where a printed name or capacity is needed — each on its own line, carrying the signer's key (e.g. client, member). The platform renders these as clean ruled lines and anchors the e-signature to them.
--- End formatting and drafting standards ---"
`;

exports[`assembleDraftingPrompt — system facts land first > jurisdiction SET: the prompt opens with the system-facts block, slots still fill (snapshot) 1`] = `
"--- System facts (authoritative platform facts — ground the document in these; never contradict, guess around, or default to a different jurisdiction) ---
Governing jurisdiction: North Carolina (source: matter fact)
Today's date: July 20, 2026
Firm name: Pacheco Law Firm

--- Formatting and drafting standards (apply to the ENTIRE document) ---
Produce a professionally formatted, execution-ready legal document:
- STRUCTURE: organize the document into consistently numbered Articles and Sections (e.g. "Article I", "Section 1.1") in a logical order; never a wall of unstructured text.
- HEADINGS & CAPITALIZATION: write the document title and every article/section heading in Title Case with correct capitalization throughout. NEVER a lowercase or mixed-case title such as "operating agreement OF Acme LLC" — titles and headings read as proper titles.
- DEFINED TERMS & SECTION LEADS: bold each defined term where it is first defined, and bold the lead-in phrase of each section (e.g. "**Governing Law.** This Agreement is governed by …").
- REGISTER: use a formal, precise, robust legal register — complete sentences, defined terms used consistently, no casual phrasing, filler, or hedging.
- SIGNATURE, DATE & EXECUTION LINES: NEVER draw signature, date, or execution lines with underscores or dashes ("______", "Date: ____", "-----", "—"). Emit the canonical execution markers instead — {{sign:key}} for a signature line, {{date:key}} for a date line, and {{name:key}} / {{title:key}} where a printed name or capacity is needed — each on its own line, carrying the signer's key (e.g. client, member). The platform renders these as clean ruled lines and anchors the e-signature to them.
--- End formatting and drafting standards ---

Draft an LLC operating agreement.
## Questionnaire
{
  "company_name": "Acme LLC"
}
## Transcript
Members agreed on terms.
## Template
TEMPLATE BODY"
`;

exports[`assembleDraftingPrompt — system facts land first > jurisdiction UNSET: the honest-unset instruction opens the prompt (snapshot) 1`] = `
"--- System facts (authoritative platform facts — ground the document in these; never contradict, guess around, or default to a different jurisdiction) ---
Governing jurisdiction: NOT SET — do not assume any state; write "Governing law to be confirmed"
Today's date: July 20, 2026

--- Formatting and drafting standards (apply to the ENTIRE document) ---
Produce a professionally formatted, execution-ready legal document:
- STRUCTURE: organize the document into consistently numbered Articles and Sections (e.g. "Article I", "Section 1.1") in a logical order; never a wall of unstructured text.
- HEADINGS & CAPITALIZATION: write the document title and every article/section heading in Title Case with correct capitalization throughout. NEVER a lowercase or mixed-case title such as "operating agreement OF Acme LLC" — titles and headings read as proper titles.
- DEFINED TERMS & SECTION LEADS: bold each defined term where it is first defined, and bold the lead-in phrase of each section (e.g. "**Governing Law.** This Agreement is governed by …").
- REGISTER: use a formal, precise, robust legal register — complete sentences, defined terms used consistently, no casual phrasing, filler, or hedging.
- SIGNATURE, DATE & EXECUTION LINES: NEVER draw signature, date, or execution lines with underscores or dashes ("______", "Date: ____", "-----", "—"). Emit the canonical execution markers instead — {{sign:key}} for a signature line, {{date:key}} for a date line, and {{name:key}} / {{title:key}} where a printed name or capacity is needed — each on its own line, carrying the signer's key (e.g. client, member). The platform renders these as clean ruled lines and anchors the e-signature to them.
--- End formatting and drafting standards ---

Draft an LLC operating agreement.
## Questionnaire
{
  "company_name": "Acme LLC"
}
## Transcript
Members agreed on terms.
## Template
TEMPLATE BODY"
`;
